[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui/level-complete/level-complete.gd" type="Script" id=1]
[ext_resource path="res://gui/level-complete/background.png" type="Texture" id=2]
[ext_resource path="res://gui/level-complete/coin.png" type="Texture" id=3]
[ext_resource path="res://gui/font/montserrat_black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://gui/level-complete/restart-level.png" type="Texture" id=5]
[ext_resource path="res://gui/level-complete/continue.png" type="Texture" id=6]
[ext_resource path="res://gui/level-complete/share.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
extra_spacing_bottom = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[node name="LevelComplete" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
path_scene_select_level = "res://gui/level-select/LevelSelect.tscn"

[node name="BlackOverlay" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 0.313726 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -398.0
margin_right = 250.0
margin_bottom = 432.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 700.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.0
margin_top = 213.0
margin_right = -55.0
margin_bottom = -153.0
custom_constants/separation = 50

[node name="Stars" type="TextureRect" parent="VBoxContainer/TextureRect/VBoxContainer"]
margin_right = 394.0
stretch_mode = 4

[node name="Score" type="HBoxContainer" parent="VBoxContainer/TextureRect/VBoxContainer"]
margin_top = 50.0
margin_right = 394.0
margin_bottom = 135.0

[node name="Icon" type="TextureRect" parent="VBoxContainer/TextureRect/VBoxContainer/Score"]
margin_right = 128.0
margin_bottom = 85.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="General" type="Label" parent="VBoxContainer/TextureRect/VBoxContainer/Score"]
margin_left = 132.0
margin_top = 17.0
margin_right = 260.0
margin_bottom = 67.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.47451, 0.388235, 0.388235, 1 )
text = "0"
align = 1
valign = 2

[node name="Level" type="Label" parent="VBoxContainer/TextureRect/VBoxContainer/Score"]
margin_left = 264.0
margin_top = 2.0
margin_right = 394.0
margin_bottom = 82.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1200"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TextureRect/VBoxContainer"]
margin_top = 185.0
margin_right = 394.0
margin_bottom = 303.0
custom_constants/separation = 10
alignment = 1

[node name="RestartButton" type="TextureButton" parent="VBoxContainer/TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 127.0
margin_bottom = 118.0
texture_normal = ExtResource( 5 )

[node name="ContinueButton" type="TextureButton" parent="VBoxContainer/TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 257.0
margin_bottom = 118.0
texture_normal = ExtResource( 6 )

[node name="ShareButton" type="TextureButton" parent="VBoxContainer/TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 347.0
margin_bottom = 118.0
texture_normal = ExtResource( 7 )

[node name="Admob" type="Label" parent="VBoxContainer"]
margin_top = 720.0
margin_right = 500.0
margin_bottom = 782.0
custom_fonts/font = SubResource( 3 )
text = "- AdMob Here -"
align = 1
[connection signal="pressed" from="VBoxContainer/TextureRect/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureRect/VBoxContainer/HBoxContainer/ShareButton" to="." method="_on_ShareButton_pressed"]
